--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "1.0.8",
+  "version": "1.1.0-alpa.1",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -24,14 +24,14 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/runtime": "^7.7.7",
+    "@babel/core": "^7.8.0",
+    "@babel/plugin-transform-runtime": "^7.8.0",
+    "@babel/preset-env": "^7.8.0",
+    "@babel/runtime": "^7.8.0",
     "airdcpp-extension": "^1.1.0",
     "airdcpp-extension-settings": "^1.1.0",
     "babel-loader": "^8.0.6",
-    "core-js": "^3.6.2",
+    "core-js": "^3.6.3",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
