--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "airdcpp-user-commands",
-  "version": "1.1.0-alpa.1",
+  "name": "@peps1/airdcpp-user-commands",
+  "version": "2.0.0-alpha.2",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -11,37 +11,52 @@
     "airdcpp-extensions",
     "airdcpp-extensions-public"
   ],
-  "bugs": "https://github.com/peps1/airdcpp-user-commands/issues/",
+  "bugs": {
+    "url": "https://github.com/peps1/airdcpp-user-commands/issues/"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/peps1/airdcpp-user-commands"
   },
   "scripts": {
-    "build": "npm run clean && cross-env NODE_ENV=production webpack",
+    "build": "tsc && npm run clean && cross-env NODE_ENV=production webpack",
     "clean": "rimraf dist",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/main.ts",
     "start": "node devtools/watch.js ../dist/main.js",
+    "test": "nyc mocha ./test",
     "prepublishOnly": "npm run build",
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/plugin-transform-runtime": "^7.8.0",
-    "@babel/preset-env": "^7.8.0",
-    "@babel/runtime": "^7.8.0",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
+    "@types/node": "^13.7.0",
+    "@types/source-map-support": "^0.5.1",
     "airdcpp-extension": "^1.1.0",
     "airdcpp-extension-settings": "^1.1.0",
     "babel-loader": "^8.0.6",
-    "core-js": "^3.6.3",
+    "chai": "^4.2.0",
+    "core-js": "^3.6.4",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.0",
+    "mocha": "^7.0.1",
     "nodemon": "^1.19.1",
-    "rimraf": "^3.0.0",
+    "nyc": "^15.0.0",
+    "rimraf": "^3.0.1",
+    "sinon": "^8.1.1",
     "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
-  "main": "dist/main.js",
+  "main": "dist/index",
+  "types": "dist/index",
   "airdcpp": {
     "apiVersion": 1,
     "minApiFeatureLevel": 0
