--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,17 @@ dist: bionic
 language: node_js
 node_js:
   - 13
-  - 12
   - 10
+  - 8
 before_install:
   # Update to the latest version as peer dependencies may cause issues otherwise
   - npm install npm -g
 script:
   - npm run build
   - npm test
+  - npm install codecov -g
 notifications:
   email:
     on_failure: change
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - codecov -f coverage/*.json
