--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@peps1/airdcpp-user-commands",
+  "name": "airdcpp-user-commands",
   "version": "2.0.0-alpha.3",
   "description": "User commands to show information in chat",
   "license": "MIT",
