--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.16",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "kind-of": ">=6.0.3",
+    "minimist": ">=1.2.3",
+    "acorn": ">=7.1.1"
   },
   "main": "dist/main.js",
   "airdcpp": {
