--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,13 @@
   "presets": [
     [ "@babel/env", {
       "targets": {
-        "node": "0.10"
+        "node": "6"
       },
       "useBuiltIns": "usage",
       "corejs": 3
     }],
-    "@babel/typescript"
+    "@babel/typescript",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     ["@babel/plugin-transform-runtime", {
