--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0-alpha.5",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -29,35 +29,39 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/runtime": "^7.8.4",
-    "@types/chai": "^4.2.8",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^13.7.0",
-    "@types/sinon": "^7.5.1",
+    "@babel/core": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
+    "@babel/runtime": "^7.10.1",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.9",
+    "@types/sinon": "^7.5.2",
     "@types/source-map-support": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "airdcpp-extension": "^1.1.0",
     "airdcpp-extension-settings": "^1.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.0",
-    "mocha": "^7.0.1",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsdoc": "^26.0.0",
+    "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "mocha": "^7.2.0",
     "nodemon": "^1.19.1",
-    "nyc": "^15.0.0",
-    "rimraf": "^3.0.1",
+    "nyc": "^15.0.1",
+    "rimraf": "^3.0.2",
     "sinon": "^8.1.1",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "source-map-support": "^0.5.19",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "main": "dist/index",
   "types": "dist/index",
