--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "1.1.0-alpa.1",
+  "version": "1.1.0-beta.1",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -24,25 +24,25 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "airdcpp-extension": "^1.1.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
+    "acorn": "^7.3.1",
+    "airdcpp-extension": ">=1.2.0-beta.1",
     "airdcpp-extension-settings": "^1.1.0",
     "babel-loader": "^8.1.0",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
-    "nodemon": "^1.19.1",
-    "rimraf": "^3.0.2",
-    "source-map-support": "^0.5.16",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "eslint": "^7.3.1",
+    "eslint-plugin-react": "^7.20.3",
     "kind-of": ">=6.0.3",
     "minimist": ">=1.2.3",
-    "acorn": ">=7.1.1"
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "source-map-support": "^0.5.19",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "main": "dist/main.js",
   "airdcpp": {
