--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0-beta.1",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -23,35 +23,35 @@
     "clean": "rimraf dist",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/main.ts",
     "start": "node devtools/watch.js ../dist/main.js",
-    "test": "nyc mocha -r ts-node/register test/*.ts",
+    "test": "nyc mocha -r ts-node/register src/tests/*.ts",
     "posttest": "nyc report --reporter=json",
     "prepublishOnly": "npm run build",
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-typescript": "^7.10.1",
-    "@babel/runtime": "^7.10.3",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.12",
+    "@types/node": "^13.13.13",
     "@types/sinon": "^7.5.2",
-    "@types/source-map-support": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
+    "@types/source-map-support": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "airdcpp-extension": "^1.1.0",
     "airdcpp-extension-settings": "^1.1.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "cross-env": "^6.0.3",
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsdoc": "^26.0.2",
     "eslint-plugin-prefer-arrow": "^1.2.1",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react": "^7.20.3",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
@@ -59,7 +59,7 @@
     "sinon": "^8.1.1",
     "source-map-support": "^0.5.19",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5",
+    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
