--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.5",
   "description": "User commands to show information in chat",
   "license": "MIT",
   "author": {
@@ -41,8 +41,6 @@
     "@types/source-map-support": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
-    "airdcpp-extension": "^1.2.0-beta.1",
-    "airdcpp-extension-settings": "^1.1.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
@@ -63,8 +61,12 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
-  "main": "dist/index",
-  "types": "dist/index",
+  "dependencies": {
+    "airdcpp-extension": "^1.2.0-beta.1",
+    "airdcpp-extension-settings": "^1.1.0"
+  },
+  "main": "dist/main",
+  "types": "dist/main",
   "airdcpp": {
     "apiVersion": 1,
     "minApiFeatureLevel": 0
