--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clean": "rimraf dist",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/main.ts",
     "start": "node devtools/watch.js ../dist/main.js",
-    "test": "nyc mocha -r ts-node/register src/tests/*.ts",
+    "test": "nyc mocha -r ts-node/register tests/*.ts",
     "posttest": "nyc report --reporter=json",
     "prepublishOnly": "npm run build",
     "webpack": "webpack"
