--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.10.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.14",
@@ -71,10 +72,5 @@
   "airdcpp": {
     "apiVersion": 1,
     "minApiFeatureLevel": 0
-  },
-  "nyc": {
-    "exclude": [
-      "src/tests/"
-    ]
   }
 }
