--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@babel/runtime": "^7.10.4",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/bytes": "^3.1.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.14",
@@ -43,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "babel-loader": "^8.1.0",
+    "bytes": "^3.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "cross-env": "^6.0.3",
