--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.1.0-beta.6",
+  "version": "2.1.0",
   "description": "User commands to show information in chat",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
+    "@babel/runtime": "^7.10.5",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bytes": "^3.1.0",
     "@types/chai": "^4.2.11",
@@ -42,8 +42,8 @@
     "@types/node": "^13.13.14",
     "@types/sinon": "^7.5.2",
     "@types/source-map-support": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "babel-loader": "^8.1.0",
     "bytes": "^3.1.0",
     "chai": "^4.2.0",
