update description and README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "airdcpp-user-commands",
   "version": "2.1.0",
-  "description": "User commands to show information in chat",
+  "description": "Extension to run commands from chat to output information or trigger actions. See `/help` for a full list",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
   "author": {
