--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {
-    "airdcpp-apisocket": "^2.3.1",
-    "airdcpp-extension": "^1.2.0",
+    "airdcpp-apisocket": "^2.4.0-beta.3",
+    "airdcpp-extension": "^1.3.0-beta.2",
     "airdcpp-extension-settings": "^1.1.0"
   },
   "main": "dist/main",
