update changelog and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.1.0",
+  "version": "2.2.0-beta.1",
   "description": "Extension to run commands from chat to output information or trigger actions. See `/help` for a full list",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
