--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.2.0-beta.1",
+  "version": "2.2.0-beta.2",
   "description": "Extension to run commands from chat to output information or trigger actions. See `/help` for a full list",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
@@ -20,58 +20,66 @@
     "url": "https://github.com/peps1/airdcpp-user-commands"
   },
   "scripts": {
-    "build": "tsc && npm run clean && cross-env NODE_ENV=production webpack",
+    "build": "npm run lint && tsc && npm run clean && cross-env NODE_ENV=production webpack",
     "clean": "rimraf dist",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/main.ts",
     "start": "node devtools/watch.js ../dist/main.js",
     "test": "nyc mocha -r ts-node/register src/tests/*.ts",
     "posttest": "nyc report --reporter=json",
     "prepublishOnly": "npm run build",
+    "lint": "eslint .",
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.11.2",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bytes": "^3.1.0",
-    "@types/chai": "^4.2.13",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.8",
+    "@types/node": "^14.14.0",
     "@types/sinon": "^9.0.8",
     "@types/source-map-support": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
     "bytes": "^3.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-jsdoc": "^30.6.4",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-jsdoc": "^30.7.3",
     "eslint-plugin-prefer-arrow": "^1.2.2",
-    "eslint-plugin-react": "^7.21.4",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.4",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
+    "mocha": "^8.2.0",
+    "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.2.0",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   },
   "dependencies": {
-    "airdcpp-apisocket": "^2.4.0-beta.3",
-    "airdcpp-extension": "^1.3.0-beta.2",
+    "airdcpp-apisocket": "^2.4.0",
+    "airdcpp-extension": "^1.3.0",
     "airdcpp-extension-settings": "^1.1.0"
   },
   "main": "dist/main",
   "types": "dist/main",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
+  },
   "airdcpp": {
     "apiVersion": 1,
     "minApiFeatureLevel": 0
