--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.2.0-beta.3",
+  "version": "2.2.0-beta.4",
   "description": "Extension to run commands from chat to output information or trigger actions. See `/help` for a full list",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
@@ -31,46 +31,47 @@
     "webpack": "webpack"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bytes": "^3.1.0",
     "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.14.0",
-    "@types/sinon": "^9.0.8",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.13",
+    "@types/sinon": "^9.0.9",
     "@types/source-map-support": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "babel-loader": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "babel-loader": "^8.2.2",
     "bytes": "^3.1.0",
     "chai": "^4.2.0",
-    "core-js": "^3.6.5",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-jsdoc": "^30.7.3",
+    "core-js": "^3.8.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jsdoc": "^30.7.8",
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0",
-    "mocha": "^8.2.0",
+    "husky": "^4.3.6",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "sinon": "^9.2.0",
+    "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0"
+    "ts-node": "^9.1.1",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.3",
+    "webpack": "^5.10.1",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "airdcpp-apisocket": "^2.4.1",
-    "airdcpp-extension": "^1.3.0",
-    "airdcpp-extension-settings": "^1.1.0"
+    "airdcpp-extension": "^1.4.0",
+    "airdcpp-extension-settings": "^1.2.0"
   },
   "main": "dist/main",
   "types": "dist/main",
