--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airdcpp-user-commands",
-  "version": "2.2.0-beta.5",
+  "version": "2.2.0",
   "description": "Extension to run commands from chat to output information or trigger actions. See `/help` for a full list",
   "homepage": "https://github.com/peps1/airdcpp-user-commands",
   "license": "MIT",
@@ -33,18 +33,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bytes": "^3.1.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.13",
+    "@types/node": "^14.14.14",
     "@types/sinon": "^9.0.9",
     "@types/source-map-support": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "babel-loader": "^8.2.2",
     "bytes": "^3.1.0",
     "chai": "^4.2.0",
@@ -63,9 +63,9 @@
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
-    "ts-loader": "^8.0.11",
+    "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "webpack": "^5.10.1",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
